@@ -1,6 +1,0 @@
-
-echo >&2
-echo "This script is deprecated and will be removed in the next notqmail release." >&2
-echo >&2
-
-sleep 5
