@@ -1,1 +1,0 @@
-QMAIL/bin/maildir2mbox && exec Mail ${1+"$@"}
