@@ -1,3 +1,4 @@
+20200520 remove wrappers for obsolete mail clients without maildir support
 20200520 version: notqmail 1.08.
 20200519 bug: fix several other places where variables could overflow.
 20200519 security: fix signedness wraparound in substdio_{put,bput}().
